@@ -38,6 +38,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
     Based on a patch by Dima Kogan <dima@secretsauce.net>.
   * Add support for relative symlinks to dpkg-maintscript-helper symlink_to_dir
     command. Suggested by Don Armstrong <don@debian.org>.
+  * Add a new dpkg-buildflags qa feature area:
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
